[gd_scene load_steps=2 format=3 uid="uid://bxmocueqteh4f"]

[ext_resource type="Script" uid="uid://dpos1dh4x7ov0" path="res://entity/enemy/attacker.gd" id="1_gsf2q"]

[node name="Attacker" type="Area2D"]
script = ExtResource("1_gsf2q")

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
